<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.PostCar">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/post_car"
        app:titleTextColor="@color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/display_image"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:src="@drawable/car_placeholder"
                    android:scaleType="centerCrop"
                    android:visibility="visible"
                    android:foreground="@color/overlay"/>

                <TextView
                    android:id="@+id/pick_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/pick_display_pic"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="13sp"
                    android:gravity="bottom|center"
                    android:padding="10dp"/>

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_details"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryText"
                android:paddingTop="20dp"
                android:paddingBottom="0dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"/>

            <EditText
                android:id="@+id/car_make"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/car_make"
                android:textColorHint="@color/colorSecondaryText"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/car_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/car_model"
                android:textColorHint="@color/colorSecondaryText"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/fuel_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/car_fuel_type"
                android:textColorHint="@color/colorSecondaryText"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/engine_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/car_engiene"
                android:textColorHint="@color/colorSecondaryText"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/car_transmission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/car_transmission"
                android:textColorHint="@color/colorSecondaryText"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/car_capacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/car_capacity"
                android:textColorHint="@color/colorSecondaryText"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/car_accessories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/any_other_accessories"
                android:textColorHint="@color/colorSecondaryText"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/hire_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hire_rate"
                android:textColorHint="@color/colorSecondaryText"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:background="@color/colorPrimary"
                android:layout_margin="10dp"
                android:padding="10dp"/>

        </LinearLayout>

    </ScrollView>



</LinearLayout>