<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/display_image"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:src="@drawable/car1"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/car_make_and_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_and_model"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/car_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/car_details"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryText"
                android:paddingTop="2dp"/>

            <TextView
                android:id="@+id/car_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryText"
                android:drawableStart="@drawable/ic_action_rating"
                android:drawablePadding="3dp"
                android:layout_gravity="bottom|end"/>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>